style update to purple and some block logic

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <div id="grand-container">
         <div id="info-container">
             <p>
-                &nbsp;container width: <input type="text" id="container-width" autocomplete="off" />
-            </p>
-            <p>
-                container height: <input type="text" id="container-height" autocomplete="off" />
+                container width: <input type="text" id="container-width" autocomplete="off" />
             </p>
             <p>
                 moving box X-axis: <input type="text" id="box-x" autocomplete="off" />
@@ -29,9 +26,10 @@
             <p>
                 moving box Y-axis: <input type="text" id="box-y" autocomplete="off" />
             </p>
-            <p>
+            <p class="custom-attr">
                 set period(sec): <input type="text" id="set-period" autocomplete="off" />
-                <input type="button" id="set-period-go" value="Go!" />
+                radius(px): <input type="text" id="set-radius" autocomplete="off" />
+                <input type="button" id="set-attr-go" value="Go!" />
             </p>
         </div>
         <div id="container">
