--- a/index.html
+++ b/index.html
@@ -23,20 +23,24 @@
         <div id="info-container-1" class="info-container">
             <h3>Block one</h3>
             <p>
-                moving box X-axis: <input type="text" class="box-x" autocomplete="off" />
+                <span>moving box X-axis: </span><input type="text" class="box-x" autocomplete="off" />
             </p>
             <p>
-                moving box Y-axis: <input type="text" class="box-y" autocomplete="off" />
+                <span>moving box Y-axis: </span><input type="text" class="box-y" autocomplete="off" />
             </p>
             <p class="custom-attr">
-                set period(sec): <input type="text" class="set-period" autocomplete="off" />
-                radius(px): <input type="text" class="set-radius" autocomplete="off" />
+                <span>set color: </span><input type="text" class="set-color" autocomplete="off" />
+                <span>set size(px): </span><input type="text" class="set-size" autocomplete="off" />
                 <br />
-                T linear Δ(sec): <input type="text" class="set-period-change" autocomplete="off" />
-                R linear Δ(px): <input type="text" class="set-radius-change" autocomplete="off" />
+                <span>set period(sec): </span><input type="text" class="set-period" autocomplete="off" />
+                <span>radius(px): </span><input type="text" class="set-radius" autocomplete="off" />
+                <br />
+                <span>T Δ(sec/sec): </span><input type="text" class="set-period-change" autocomplete="off" />
+                <span>R Δ(px/sec): </span><input type="text" class="set-radius-change" autocomplete="off" />
             </p>
             <p>
                 <input type="button" class="set-attr-go" value="Go!" />
+                <input type="button" class="set-attr-reset" value="Reset" />
             </p>
         </div>
         <div id="container">
