added projection; set fps not complete

--- a/index.html
+++ b/index.html
@@ -48,9 +48,19 @@
             <div id="origin"></div>
             <div id="moving-obj-1" class="moving-obj"></div>
         </div>
+        <div id="projections">
+            <div id="moving-obj-prj-1" class="moving-obj-prj"></div>
+        </div>
+        <div class="shared-info-container-bo">
+            <span>frames per second: </span><span>25</span>
+            <input type="button" class="fps-decrease" value="decrease" />
+            <input type="button" class="fps-increase" value="increase" />
+            (please reset)
+        </div>
     </article>
     <footer>
-        <br />Still working in progress! (c) cleooldsaty. Report bug: <a
+        <br />
+        Still working in progress! (c) cleooldsaty. Report bug: <a
             href="https://github.com/cleoold/uniform_circular_motion" target="_blank">Github</a>
     </footer>
 </body>
