can now drag the ball to set its initial attributes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div id="origin"></div>
             <div id="moving-obj-1" class="moving-obj"></div>
         </div>
-        <div id="projections">
+        <div class="projections">
             <div id="moving-obj-prj-1" class="moving-obj-prj"></div>
         </div>
         <div class="shared-info-container-bo">
@@ -60,9 +60,14 @@
     </article>
     <footer>
         <br />
-        Still working in progress! (c) cleooldsaty. Report bug: <a
+        Still working in progress! (c) 2019 cleooldsaty. Report bug: <a
             href="https://github.com/cleoold/uniform_circular_motion" target="_blank">Github</a>
     </footer>
 </body>
 
+<script src="./js/bg.js"></script>
 <script src="./js/movingbox.js"></script>
+
+<script>
+    var circular1 = new BlockInMotion('1');
+</script>
