--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <p>
                 <span class="bold">The principle of this </span> is depicted by a parametric equation with t (time) as
                 variable:
-                <span class="equation">x(t) = R(t)⋅cos(𝜔(t)-𝜑) = R(t)⋅cos(2π/T(t)-𝜑)</span>
-                <span class="equation">y(t) = R(t)⋅sin(𝜔(t)-𝜑) = R(t)⋅sin(2π/T(t)-𝜑)</span>
-                plus the offset correction of the box that contains the ball. Where R is radius and R(t) = R₀+ΔR, T is
-                the period with T(t) = T₀+ΔT, and 𝜑 is the offset.
+                <span class="equation">x(t) = R(t)⋅cos(𝜔(t)⋅t-𝜑) = R(t)⋅cos(2π/T(t)⋅t-𝜑)</span>
+                <span class="equation">y(t) = R(t)⋅sin(𝜔(t)⋅t-𝜑) = R(t)⋅sin(2π/T(t)⋅t-𝜑)</span>
+                plus the offset correction of the box that contains the ball. Where R is radius and R(t) = R₀+t⋅ΔR, T is
+                the period with T(t) = T₀+t⋅ΔT, and 𝜑 is the offset.
             </p>
         </div>
         <hr />
