--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </article>
     <footer>
         <br />
-        Still working in progress!? (c) 2019 cleooldsaty. Report bug: <a
+        Have fun. (c) 2019 cleooldsaty. Report bug: <a
             href="https://github.com/cleoold/uniform_circular_motion" target="_blank">Github</a>
     </footer>
 </body>
