you can now rotate motions

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <input type="text" class="set-period" autocomplete="off" />
             <div class="box-label"><span>T Δ(sec/sec)</span></div>
             <input type="text" class="set-period-change" autocomplete="off" />
+            <div class="box-label"><span>rotate angle(deg)</span></div>
+            <input type="text" class="set-angle" autocomplete="off" />
+            <div class="box-label"><span>α Δ(deg/sec)</span></div>
+            <input type="text" class="set-angle-change" autocomplete="off" />
 
             <div class="buttons">
                 <input type="button" class="set-attr-go" value="Go!" />
