--- a/index_cn.html
+++ b/index_cn.html
@@ -45,7 +45,7 @@
             <input type="text" class="set-size" autocomplete="off" />
             <div class="box-label"><span>轨道X半轴(px)</span></div>
             <input type="text" class="set-semi-X-axis" autocomplete="off" />
-            <div class="box-label"><span>Rx Δ(px/sec)</span></div>
+            <div class="box-label"><span>Rx Δ(px/s)</span></div>
             <input type="text" class="set-semi-X-axis-change" autocomplete="off" />
             <div class="box-label"><span>轨道Y半轴(px)</span></div>
             <input type="text" class="set-semi-Y-axis" autocomplete="off" />
