some typo; added examples

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <p>
                 By applying a rotation matrix onto this vector can cause the ball's trajectory to rotate:
                 <span class="equation">rotated[x, y](t) = [x(t)⋅cosα-y(t)⋅sinα, x(t)⋅sinα+y(t)⋅cosα]</span>
-                and α(t) = α₀+Δα is the rotation angle.
+                and α(t) = α₀+t⋅Δα is the rotation angle.
             </p>
             You can spawn multiple objects to make beautiful effects.
         </div>
