--- a/index_cn.html
+++ b/index_cn.html
@@ -109,7 +109,7 @@
                 加上小球所在容器的修正. 其中 Rx 或 Ry 为X半轴或Y半轴且 Rx(t) = Rx₀+t⋅ΔRx, Ry(t) = Ry₀+t⋅ΔRy, T 为周期且 T(t) = T₀+t⋅ΔT, 𝜑 是初相.
             </p>
             <p>
-                使用旋转矩阵作用到它可以旋转小球的轨迹，其中 α(t) = α₀+Δα 为偏移角：
+                使用旋转矩阵作用到它可以旋转小球的轨迹，其中 α(t) = α₀+t⋅Δα 为偏移角：
                 <span class="equation">rotated[x, y](t) = [x(t)⋅cosα-y(t)⋅sinα, x(t)⋅sinα+y(t)⋅cosα]</span>
             </p>
             您可以生成多个这样的小球来实现炫目的效果.
